Support non-colab env

--- a/CIS_545_Final.ipynb
+++ b/CIS_545_Final.ipynb
@@ -54,28 +54,43 @@
       "metadata": {
         "id": "jRHclwDKUOJl"
       },
-      "execution_count": 1,
+      "execution_count": 22,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "# If this is colab env, then mount the drive\n",
+        "if 'google.colab' in str(get_ipython()):\n",
+        "    print('Running on CoLab')\n",
+        "    from google.colab import drive\n",
+        "    drive.mount('/content/drive')\n",
+        "\n",
+        "    data_path_in_drive = '/content/drive/MyDrive/CIS545-final/'\n",
+        "    flights_data = '/content/drive/MyDrive/CIS545-final/US Airline Flight Routes and Fares 1993-2024.csv'\n",
+        "    fuel_data = '/content/drive/MyDrive/CIS545-final/flat-ui__data-Fri Mar 28 2025.csv'\n",
+        "    kaggle_key = '/content/drive/MyDrive/CIS545-final/kaggle.json'\n",
+        "else:\n",
+        "    print('Not running on CoLab')\n",
+        "    data_path_in_drive = './'\n",
+        "    flights_data = './US Airline Flight Routes and Fares 1993-2024.csv'\n",
+        "    fuel_data = './flat-ui__data-Fri Mar 28 2025.csv'\n",
+        "    kaggle_key = './kaggle.json'"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_b301OVESaGD",
-        "outputId": "4e12b35e-9764-4b0b-b926-434d21894188"
+        "outputId": "0dc43220-2cf1-4420-ed41-318d7884f9b3"
       },
-      "execution_count": 2,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Running on CoLab\n",
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
@@ -84,11 +99,6 @@
     {
       "cell_type": "code",
       "source": [
-        "data_path_in_drive = '/content/drive/MyDrive/CIS545-final/'\n",
-        "flights_data = '/content/drive/MyDrive/CIS545-final/US Airline Flight Routes and Fares 1993-2024.csv'\n",
-        "fuel_data = '/content/drive/MyDrive/CIS545-final/flat-ui__data-Fri Mar 28 2025.csv'\n",
-        "kaggle_key = '/content/drive/MyDrive/CIS545-final/kaggle.json'\n",
-        "\n",
         "# Check if these files exists\n",
         "file_paths = [\n",
         "    (data_path_in_drive, \"Directory\"),\n",
@@ -112,9 +122,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y9WVolIVTOTF",
-        "outputId": "adec8493-c45d-4af1-b918-ff8eae2a05cd"
+        "outputId": "11bda66b-5b13-4710-ab74-85a18d9508c4"
       },
-      "execution_count": 3,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -1157,11 +1167,11 @@
         "df_clean.shape\n"
       ],
       "metadata": {
-        "id": "IY4yl1QTXxgW",
-        "outputId": "87a0b54f-4c9e-4322-d70e-1f7b61a74a3b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IY4yl1QTXxgW",
+        "outputId": "87a0b54f-4c9e-4322-d70e-1f7b61a74a3b"
       },
       "execution_count": 17,
       "outputs": [
