Add project management

--- a/CIS_545_Final.ipynb
+++ b/CIS_545_Final.ipynb
@@ -137,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "metadata": {
         "id": "c3YQPlxOPNyb"
       },
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -174,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -199,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": null,
       "metadata": {
         "id": "Ecmk2T5-nE9e"
       },
@@ -223,7 +223,7 @@
         "id": "YyTMnRulne5Y",
         "outputId": "a548a266-3110-424c-8ad6-697c3c2c0fb4"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "metadata": {
         "id": "dLd-AT0onE9e"
       },
@@ -252,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": null,
       "metadata": {
         "id": "XuuguVbinE9e"
       },
@@ -295,7 +295,7 @@
       "metadata": {
         "id": "gW8DctISvqvt"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -320,7 +320,7 @@
         "id": "Q4JX0m7BunXx",
         "outputId": "6130ee14-dff8-463b-814e-0cb1cc4b758f"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -372,7 +372,7 @@
         "id": "YQzrG8QuvwcY",
         "outputId": "337c78a4-c416-4963-bc68-3415b913e0ef"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -399,7 +399,7 @@
         "id": "XkGJWMFRvydi",
         "outputId": "6ba9cce2-ac99-421b-84c8-ea0212bedbe7"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -844,7 +844,7 @@
         "id": "k6Gay_pdv0ak",
         "outputId": "cbafc2af-7a31-4de3-c89e-7ed96b7df1f4"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1241,7 +1241,7 @@
         "id": "5r21Z9Htv25c",
         "outputId": "2e3f45fa-95d8-48c0-880a-00170607d642"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1276,7 +1276,7 @@
         "id": "NIepgkHQv5Ps",
         "outputId": "21c0b294-9472-4ff9-af93-9e1c1206ab60"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1670,7 +1670,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 3.1.2 Fuel Price Data"
+        "### 2.3.2 Fuel Price Data"
       ],
       "metadata": {
         "id": "zVakNH-Nv8CK"
@@ -1689,7 +1689,7 @@
         "id": "JL7jE8Ovv-Z0",
         "outputId": "263b3ecc-c2f1-443f-a1fe-eb284191b4fc"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1720,7 +1720,7 @@
         "id": "x_qt7oAOwAQQ",
         "outputId": "9d6b6316-072d-4589-8dfd-7240e4cfed54"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1747,7 +1747,7 @@
         "id": "dfjmmSIVwD4W",
         "outputId": "821e9db8-9bb2-4ea2-8fd1-23606e019d7a"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2048,7 +2048,7 @@
         "id": "drT8HvCewGQx",
         "outputId": "aa762651-0f8a-4b4f-8d87-868d62a46454"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2342,7 +2342,7 @@
         "id": "yna6glJRwIAO",
         "outputId": "2cf997f6-158f-44d9-f7dd-a210302de615"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2374,7 +2374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": null,
       "metadata": {
         "id": "kPOODyPpZ7cu"
       },
@@ -2388,7 +2388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": null,
       "metadata": {
         "id": "wowSpJOTal1Q"
       },
@@ -2409,7 +2409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2493,7 +2493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2546,7 +2546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2635,7 +2635,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2724,7 +2724,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": null,
       "metadata": {
         "id": "VNz8-EUmPf7o"
       },
@@ -2745,7 +2745,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": null,
       "metadata": {
         "id": "XgVx7jcRP4Vz"
       },
@@ -2761,7 +2761,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": null,
       "metadata": {
         "id": "414kGw5BP7A8"
       },
@@ -2774,7 +2774,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2902,7 +2902,23 @@
         "id": "x-m44yCSPgPL"
       },
       "source": [
-        "# **5. Project Management**"
+        "# **5. Project Management**\n",
+        "### 🗓️ Timeline & Milestones\n",
+        "| 📌 Task                                | 🗓️ Deadline | ✅ Status     | 💬 Notes |\n",
+        "|----------------------------------------|-------------|---------------|---------|\n",
+        "| Data acquisition and initial cleaning  | April 5     | ✅ Completed  | All raw data sources merged and cleaned |\n",
+        "| Exploratory Data Analysis (EDA)        | April 10    | ✅ Completed  | Key visuals and early insights generated |\n",
+        "| Baseline regression model              | April 12    | ✅ Completed  | Linear regression used as a baseline |\n",
+        "| Advanced model training (RF, XGBoost)  | April 20    | 🟡 In progress| Random Forest currently being tuned |\n",
+        "| Model evaluation and result visualization | April 25 | ⏳ Upcoming   | Will compare models using R² and RMSE |\n",
+        "| Final report writing and presentation  | April 30    | ⏳ Upcoming   | We’ll prepare slides, summary, and submit final deliverables |\n",
+        "\n",
+        "### 📈 Progress Tracking\n",
+        "\n",
+        "We are using a shared Google Colab and GitHub repository to:\n",
+        "- Track task completion status\n",
+        "- Share code updates and experiment logs\n",
+        "- Collaboratively edit the final presentation and written report"
       ]
     },
     {
@@ -2924,7 +2940,11 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [
+        "YzF9G62hj7h9",
+        "x79vIJRti3Hi"
+      ]
     },
     "kernelspec": {
       "display_name": "Python 3",
