--- a/CIS_545_Final.ipynb
+++ b/CIS_545_Final.ipynb
@@ -45,7 +45,7 @@
         "id": "GB88b5oxnE9e"
       },
       "source": [
-        "## **1.1 Probelm Statement**\n",
+        "## **1.1 Problem Statement**\n",
         "Airfare pricing in the U.S. domestic airline industry has long been a topic of interest due to its dynamic and opaque nature. From 1993 to 2024, the industry has undergone substantial changes including fluctuating fuel prices, shifting market competition, and evolving consumer behavior. These factors make it difficult for travelers to anticipate ticket prices and for airlines to optimize revenue through effective pricing strategies.\n",
         "\n",
         "Despite the abundance of large-scale data, there remains a lack of comprehensive, data-driven analyses that systematically explore the relationship between these variables and airfare trends. One of our team members is planning to book a flight during a holiday period and is particularly interested in understanding what drives changes in ticket prices. This curiosity sparked our interest and motivated us to investigate whether historical data could reveal meaningful patterns that help consumers make more informed travel decisions."
