Update plot legends

--- a/CIS_545_Final.ipynb
+++ b/CIS_545_Final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "563474c3",
+   "id": "69f71152",
    "metadata": {},
    "source": [
     "<a href=\"https://colab.research.google.com/github/jbwenjoy/000545000/blob/jbw/CIS_545_Final.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -10,13 +10,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31516ee3",
+   "id": "43220cb2",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "1b8b6620",
+   "id": "156e8373",
    "metadata": {},
    "source": [
     "# **CIS 5450 Final Project - Spring 2025**\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88016b08",
+   "id": "a14a0f93",
    "metadata": {},
    "source": [
     "# **1. Introduction and Background**"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b241d7e",
+   "id": "db5f0341",
    "metadata": {},
    "source": [
     "## **1.1 Problem Statement**\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0129378",
+   "id": "43103103",
    "metadata": {},
    "source": [
     "## **1.2 Objective and Value Proposition**\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e7dfa41",
+   "id": "a4c4fbb1",
    "metadata": {},
    "source": [
     "# **2. Data Loading and Preprocessing**\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3abdfe7b",
+   "id": "2ee08954",
    "metadata": {},
    "source": [
     "## **2.1 📊 Overview of the Dataset**\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28da9bd7",
+   "id": "cd3a9a8b",
    "metadata": {},
    "source": [
     "## **2.2 Data Loading**"
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99cf79cf",
+   "id": "286f8375",
    "metadata": {},
    "source": [
     "Import the relevant libraries for all stages of our report (pre-processing, exploratory data analysis, and model selection). These imports primarily span fundamental libraries such as `pandas`, `matplotlib`, `numpy`, and `sklearn`.\n",
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d14674d0",
+   "id": "c6465ce3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad4c9e08",
+   "id": "ff35b48d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58663ecc",
+   "id": "367e22cb",
    "metadata": {},
    "source": [
     "❗ ONLY RUN ONE OF THE TWO CELLS BELOW, SEE COMMENTS"
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8c160ea",
+   "id": "b6e47e7e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e4fcb1d",
+   "id": "d59e8bfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,14 +255,14 @@
     "if not file_exists:\n",
     "    # Create the kaggle directory and\n",
     "    # (NOTE: Do NOT run this cell more than once unless restarting kernel)\n",
-    "    !mkdir ~/.kaggle\n",
+    "    # !mkdir ~/.kaggle\n",
     "\n",
     "    # Read the uploaded kaggle.json file\n",
-    "    !cp /content/drive/MyDrive/kaggle.json ~/.kaggle/\n",
+    "    # !cp /content/drive/MyDrive/kaggle.json ~/.kaggle/\n",
     "\n",
     "    # Download flights dataset (DO NOT CHANGE)\n",
-    "    !kaggle datasets download -d bhavikjikadara/us-airline-flight-routes-and-fares-1993-2024\n",
-    "    !unzip /content/us-airline-flight-routes-and-fares-1993-2024\n",
+    "    # !kaggle datasets download -d bhavikjikadara/us-airline-flight-routes-and-fares-1993-2024\n",
+    "    # !unzip /content/us-airline-flight-routes-and-fares-1993-2024\n",
     "\n",
     "    flights_data = 'US Airline Flight Routes and Fares 1993-2024.csv'\n",
     "    flights_df = pd.read_csv(flights_data, low_memory=False)\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b150e8b",
+   "id": "8d1befc0",
    "metadata": {},
    "source": [
     "## **2.3 Data Prepossessing**\n",
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00e4d843",
+   "id": "f4203d05",
    "metadata": {},
    "source": [
     "### **2.3.1 Flight Data**"
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c35708ff",
+   "id": "bba60e1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2465e1ac",
+   "id": "30a08ab5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "314e3638",
+   "id": "8f2307e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96deb1d1",
+   "id": "8f539b2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc828bf6",
+   "id": "b04a9f63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e51ff45",
+   "id": "3d3161ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02408c2e",
+   "id": "8d52343c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27cb66b9",
+   "id": "83152352",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a7d9e5f",
+   "id": "37ec5f10",
    "metadata": {},
    "source": [
     "❗ BE CAREFUL: YOU CAN ONLY RUN BELOW ONCE WITHOUT RERUNNING THE CELL ABOVE!"
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "721ac70b",
+   "id": "1f98db5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8df0d1bf",
+   "id": "bda56b54",
    "metadata": {},
    "source": [
     "### **2.3.2 Fuel Price Data**"
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27c215ea",
+   "id": "5802eeea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77b205fa",
+   "id": "4edd26be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7063367a",
+   "id": "3c3a09cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43692c09",
+   "id": "bbcfb98a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8896170b",
+   "id": "415d5005",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e820d11",
+   "id": "cfb0723c",
    "metadata": {},
    "source": [
     "Since the fuel price data is very clean, we don't need further cleaning."
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8d4418d",
+   "id": "dcae977f",
    "metadata": {},
    "source": [
     "# **3. Exploratory Data Analysis (EDA)**\n",
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7c20bf4",
+   "id": "aff401a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc138401",
+   "id": "6dda2e7a",
    "metadata": {},
    "source": [
     "## **3.1 Distribution of Fare, distance and fuel price**"
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a52bc59",
+   "id": "9151ae79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "815f3bff",
+   "id": "841e9757",
    "metadata": {},
    "source": [
     "We can see that:\n",
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7209a0be",
+   "id": "92735664",
    "metadata": {},
    "source": [
     "## **3.2 US Flight Fare and Distance**"
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2170ac37",
+   "id": "b837e0d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13327300",
+   "id": "5c28a839",
    "metadata": {},
    "source": [
     "From the plot:\n",
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da85c5bb",
+   "id": "84997228",
    "metadata": {},
    "source": [
     "## **3.3 US Flight Fare and Fuel Price over Time**"
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41704776",
+   "id": "aef544b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,18 +670,19 @@
     "ax1.set_ylabel('Average Fare (USD)', color='blue', fontsize=12)\n",
     "ax1.tick_params(axis='y', labelcolor='blue')\n",
     "ax1.grid(True, linestyle='--', alpha=0.7)\n",
+    "ax1.legend(loc='upper left')\n",
     "\n",
     "# Avr fuel price (ax2)\n",
     "ax2 = ax1.twinx()\n",
     "sns.lineplot(x='Year', y='Price', data=avg_fuel_price_per_year, marker='s', color='red', ax=ax2, label='Average Fuel Price')\n",
     "ax2.set_ylabel('Average Fuel Price (USD)', color='red', fontsize=12)\n",
     "ax2.tick_params(axis='y', labelcolor='red')\n",
-    "\n",
+    "ax2.legend(loc='upper right')\n",
     "\n",
     "ax2.spines['right'].set_visible(True)\n",
     "ax2.spines['right'].set_color('red')\n",
     "plt.title('Average Fare and Fuel Price Over Time (by Year)', fontsize=14, fontweight='bold')\n",
-    "fig.legend(loc=\"upper left\", bbox_to_anchor=(0.1, 0.95))\n",
+    "# fig.legend(loc=\"upper left\", bbox_to_anchor=(0.1, 0.95))\n",
     "sns.despine()\n",
     "plt.tight_layout()\n",
     "\n",
@@ -690,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baf2bf9f",
+   "id": "79963575",
    "metadata": {},
    "source": [
     "From the plot:\n",
@@ -703,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bc34540",
+   "id": "c3fbae59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,19 +728,19 @@
     "ax1.set_ylabel('Average Fare (USD)', color='blue', fontsize=12)\n",
     "ax1.tick_params(axis='y', labelcolor='blue')\n",
     "ax1.grid(True, linestyle='--', alpha=0.7)\n",
+    "ax1.legend(loc='upper left')\n",
     "\n",
     "# Avr fuel price (ax2)\n",
     "ax2 = ax1.twinx()\n",
     "sns.lineplot(x='Year-Quarter', y='Price', data=merged_df, marker='s', color='red', ax=ax2, label='Average Fuel Price')\n",
     "ax2.set_ylabel('Average Fuel Price (USD)', color='red', fontsize=12)\n",
     "ax2.tick_params(axis='y', labelcolor='red')\n",
-    "\n",
-    "# Add solid line to the right spine of ax2\n",
     "ax2.spines['right'].set_visible(True)\n",
     "ax2.spines['right'].set_color('red')\n",
+    "ax2.legend(loc='upper right')\n",
     "\n",
     "plt.title('Average Quarterly Fare and Fuel Price Over Time (by Season)', fontsize=14, fontweight='bold')\n",
-    "fig.legend(loc=\"upper left\", bbox_to_anchor=(0.1, 0.95))\n",
+    "# fig.legend(loc=\"upper left\", bbox_to_anchor=(0.1, 0.95))\n",
     "\n",
     "plt.xticks(rotation=45)\n",
     "ax1.xaxis.set_major_locator(plt.MaxNLocator(15)) # Maximum num of x labels\n",
@@ -754,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69848833",
+   "id": "66dba651",
    "metadata": {},
    "source": [
     "## **3.4 US Flight Fare and Passenger Count**"
@@ -763,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f3d9e1c",
+   "id": "0784bdbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,6 +782,7 @@
     "sns.lineplot(x='Year-Quarter', y='fare', data=merged_df, marker='s', color='blue', ax=ax1, label='Average Fare')\n",
     "ax1.set_ylabel('Average Fare (USD)', color='blue', fontsize=12)\n",
     "ax1.tick_params(axis='y', labelcolor='blue')\n",
+    "ax1.legend(loc='upper left')\n",
     "\n",
     "ax2 = ax1.twinx()\n",
     "sns.lineplot(x='Year-Quarter', y='passengers', data=merged_df, marker='o', color='red', ax=ax2, label='Average Passengers')\n",
@@ -788,12 +790,13 @@
     "ax2.set_ylabel('Average Passengers', color='red', fontsize=12)\n",
     "ax2.tick_params(axis='y', labelcolor='red')\n",
     "ax2.grid(True, linestyle='--', alpha=0.7)\n",
+    "ax2.legend(loc='upper right')\n",
     "\n",
     "ax2.spines['right'].set_visible(True)\n",
     "ax2.spines['right'].set_color('red')\n",
     "\n",
     "plt.title('Average Quarterly Passengers and Fare Over Time', fontsize=14, fontweight='bold')\n",
-    "fig.legend(loc=\"upper left\", bbox_to_anchor=(0.1, 0.95))\n",
+    "# fig.legend(loc=\"upper left\", bbox_to_anchor=(0.1, 0.95))\n",
     "plt.xticks(rotation=45)\n",
     "ax1.xaxis.set_major_locator(plt.MaxNLocator(15))\n",
     "sns.despine()\n",
@@ -804,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f957a14",
+   "id": "95a5dca4",
    "metadata": {},
    "source": [
     "From the plot:\n",
@@ -815,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5aab828",
+   "id": "fac4726c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33540938",
+   "id": "57dba44d",
    "metadata": {},
    "source": [
     "From the plot:\n",
@@ -844,7 +847,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8610a62c",
+   "id": "e9a33cf4",
    "metadata": {},
    "source": [
     "## **3.5 US Flight Fare and Carrier Type for Same Routes**"
@@ -853,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a72b094",
+   "id": "a8f853a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +875,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1c9a737",
+   "id": "53086ac0",
    "metadata": {},
    "source": [
     "From this plot:\n",
@@ -884,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "040572d8",
+   "id": "95d0b0fa",
    "metadata": {},
    "source": [
     "## **3.6 Top 10 Busiest Cities (Dept/Dest)**"
@@ -893,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00b622c9",
+   "id": "1e57e83d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30a04839",
+   "id": "ced93073",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ddc4c84",
+   "id": "8f8d46d1",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -985,7 +988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08b40ede",
+   "id": "fb446c62",
    "metadata": {},
    "source": [
     "## **3.7 Correlation Analysis**"
@@ -994,7 +997,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da9999a7",
+   "id": "65cdb2bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1016,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32ed10b2",
+   "id": "67c032e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1047,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f64be3e3",
+   "id": "b5587a89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,13 +1074,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86459269",
+   "id": "edd21094",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3fd880da",
+   "id": "efd07266",
    "metadata": {},
    "source": [
     "From the correlation analysis above, we can see that airfare does have some correlation with existing numerical features. Higher fuel price, longer distance, and less passengers tend to lead to higher fare price. Large carriers tend to dominate the market and affect the airfare the most, low-fare carriers can have less market share and more flexible pricing policy and thus lead to a weaker correlation."
@@ -1085,7 +1088,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1999714",
+   "id": "15be3c75",
    "metadata": {},
    "source": [
     "# **4. Feature Engineering**\n",
@@ -1104,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97d486d1",
+   "id": "d53c1bc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1115,7 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd41b5ad",
+   "id": "300d63c8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1174,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39c5e780",
+   "id": "8ce377d2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1207,7 +1210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae47ba8b",
+   "id": "3041979b",
    "metadata": {},
    "source": [
     "### Feature Engineering Summary\n",
@@ -1222,7 +1225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8760bf15",
+   "id": "d806e6d2",
    "metadata": {},
    "source": [
     "# **5. Modeling**"
@@ -1231,7 +1234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03f4587f",
+   "id": "f6a13d59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f26683c0",
+   "id": "d6d359ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1258,7 +1261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cb99c82",
+   "id": "ab3d3507",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1312,7 +1315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f198063a",
+   "id": "e9b30251",
    "metadata": {},
    "source": [
     "As we can see, the baseline linear regression model has a very low R-squared value. This means that the model is not a good fit for the data.\n",
@@ -1324,7 +1327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1072bc0a",
+   "id": "536c2cbf",
    "metadata": {},
    "source": [
     "# **6. Project Management**\n",
@@ -1348,7 +1351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b14d75b",
+   "id": "c0db4a48",
    "metadata": {},
    "source": [
     "# **7. Hypothesis Testing**\n",
@@ -1369,7 +1372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e10aefa3",
+   "id": "75176102",
    "metadata": {},
    "source": [
     "# **8. Difficulty & Challenge**\n",
@@ -1378,7 +1381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bbfb790",
+   "id": "ebc59c7a",
    "metadata": {
     "lines_to_next_cell": 3
    },
